@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Apr 2010; Froxlor Release Team <release@froxlor.org>
+  froxlor-0.9.4.ebuild, froxlor-9999.ebuild:
+  add pl to linguas, drop app-arch/unzip depend, we just expect people to
+  have a non-broken php version around
+
 *froxlor-0.9.4 (05 Apr 2010)
 
   10 Apr 2010; Froxlor Release Team <release@froxlor.org>
